# posts-service

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
api/: permissions.py  serializers.py  tests.py  urls.py  views.py
posts/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_user.py
posts/templates/posts/: create.html
posts/templatetags/: render_markdown.py
posts_service/: asgi.py  openapi.py  settings.py  urls.py  wsgi.py
static/: layout.css
templates/: form.html  header.html  layout.html  serializer.html
users/: serializers.py  tests.py  urls.py  views.py
users/templates/registration/: login.html
users/templates/users/: list.html  posts.html  register.html
